src/app/globals.css
@config '../../tailwind.config.ts';
@import 'tailwindcss';
@import 'tw-animate-css';
@custom-variant dark (&:is(.dark *));

:root {
  --title: #222222;
  --subtitle: #6a6a6a;
  --subwhite: rgba(250, 250, 250, 0.72);

  --grayscale-25: #f7f7f7;
  --grayscale-50: #edeef2;
  --grayscale-100: #e0e0e5;
  --grayscale-200: #c6c8cf;
  --grayscale-300: #b3b5bc;
  --grayscale-400: #9fa0a7;
  --grayscale-500: #84858c;
  --grayscale-600: #707177;
  --grayscale-700: #5c5d61;
  --grayscale-800: #49494c;
  --grayscale-900: #323236;
  --grayscale-950: #1f1f22;

  --primary-100: #fee5ee;
  --primary-200: #fdb3d1;
  --primary-300: #f97fb4;
  --primary-400: #f64b97;
  --primary-500: #e60e68;

  --secondary-red-400: #ff4d4d;
  --secondary-red-500: #e80000;
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
  --input-bg: oklch(100% 0 0);
  /* 뱃지 컬러 */
  --badge-coral-light: #fcecea;
  --badge-coral-dark: #f96767;
  --badge-blue-light: #e5f3ff;
  --badge-blue-dark: #0085ff;
  --badge-green-light: #e1f9dd;
  --badge-green-dark: #37ae00;
}

@theme inline {
  --font-pretendard: var(--pretendard);

  /* Title */
  --color-title: var(--title);
  --color-subtitle: var(--subtitle);
  --color-subwhite: var(--subwhite);

  /* Grayscale */
  --color-grayscale-25: #f7f7f7;
  --color-grayscale-50: #edeef2;
  --color-grayscale-100: #e0e0e5;
  --color-grayscale-200: #c6c8cf;
  --color-grayscale-300: #b3b5bc;
  --color-grayscale-400: #9fa0a7;
  --color-grayscale-500: #84858c;
  --color-grayscale-600: #707177;
  --color-grayscale-700: #5c5d61;
  --color-grayscale-800: #49494c;
  --color-grayscale-900: #323236;

  /* Primary */
  --color-primary-100: #fee5ee;
  --color-primary-200: #fdb3d1;
  --color-primary-300: #f97fb4;
  --color-primary-400: #f64b97;
  --color-primary-500: #e60e68;

  /* Secondary Red */
  --color-secondary-red-400: #ff4d4d;
  --color-secondary-red-500: #e80000;
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --color-foreground: var(--foreground);
  --color-background: var(--background);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --color-foreground: var(--foreground);
  --color-background: var(--background);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
}

@theme {
  --color-card-border: #dddddd;
}

.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
  --input-bg: var(--input);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  html {
    @apply overflow-x-hidden;
    /* Firefox */
    scrollbar-width: thin;
    scrollbar-color: var(--color-primary-300) var(--color-primary-100);
  }

  body {
    @apply bg-background text-foreground;
    @apply !min-w-full;
    color: var(--color-title);
    font-family: var(--font-pretendard);
    box-sizing: border-box;
  }

  /* Chrome, Safari, Edge */
  ::-webkit-scrollbar {
    width: 8px;
    height: 8px;
  }

  ::-webkit-scrollbar-track {
    background: var(--color-primary-100);
  }

  ::-webkit-scrollbar-thumb {
    background: var(--color-primary-300);
    border-radius: 4px;
  }

  /* react-day-picker CSS 커스텀 */
  .rdp-month_grid {
    border-collapse: separate !important;
    border-spacing: 4px 10px;
  }

  .rdp-day {
    padding: 0;
    text-align: center;
    vertical-align: middle;
  }

  .rdp-day_button {
    border-radius: 50%;
    display: inline-flex;
    justify-content: center;
    align-items: center;
  }
}

/* 자동완성 제외하고 검증 스타일 제거 */
input:valid:not(:focus):not(:focus-visible):not(:-webkit-autofill),
input:invalid:not(:focus):not(:focus-visible):not(:-webkit-autofill) {
  outline: none;
  box-shadow: none;
}

/* 브라우저 자동완성 배경색 제어  */
input:-webkit-autofill {
  -webkit-box-shadow: inset 0 0 0 30px var(--input-bg);
  -webkit-text-fill-color: var(--foreground);
}

/* 브라우저 자동완성 배경색 제어 : focus */
input:-webkit-autofill:focus {
  -webkit-box-shadow:
    inset 0 0 0 30px var(--input-bg),
    0 0 0 3px rgba(249, 127, 180, 0.3);
}

/* 브라우저 자동완성 배경색 제어 : 에러 상태  */
input[aria-invalid='true']:-webkit-autofill {
  -webkit-box-shadow: inset 0 0 0 30px #fde6e7;
}

/* 브라우저 자동완성 배경색 제어 : 에러 상태 focus */
input[aria-invalid='true']:focus:-webkit-autofill {
  -webkit-box-shadow:
    inset 0 0 0 30px #fde6e7,
    0 0 0 3px rgba(249, 127, 180, 0.3);
}

